--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
             <section id="banner">
                 <div class="rawInfo box" align="center">
                     <div id="cost">
-                        <h1 class="rawInfo">100</h1>
+                        <h1 class="rawInfo"></h1>
                         <p class="rawInfoInfo">Cost</p>
                     </div>
                 </div>
                 <div class="rawInfo box" align="center">
                     <div id="currentTemp">
-                        <h1 class="rawInfo">25°C</h1>
+                        <h1 class="rawInfo"></h1>
                         <p class="rawInfoInfo">Temperature</p>
                     </div>
                 </div>
@@ -87,8 +87,8 @@
                         </td>
                         <td>
                             <div class="fanCtrl">
-                                <input type="radio" id="demo-priority-low" name="demo-priority" data-gear="Low" checked>
-                                <label for="demo-priority-low">Low</label>
+                                <input type="radio" id="demo-priority-low" name="demo-priority" data-gear="SongFeng" checked>
+                                <label for="demo-priority-low">SongFeng</label>
                                 <input type="radio" id="demo-priority-normal" name="demo-priority" data-gear="Normal">
                                 <label for="demo-priority-normal">Normal</label>
                                 <input type="radio" id="demo-priority-high" name="demo-priority" data-gear="High">
@@ -141,8 +141,8 @@
                     <h2>About Us</h2>
                 </header>
                 <div align="left">
-                    <p>The section that you are reading is supposed to display some hotel information. But, as known to
-                        all, this hotel thing does not exist,
+                    <p>The section that you are reading is supposed to display some hotel information. But, you know,
+                        this hotel thing does not exist,
                         <del>and I hope this assignment does not exist as well</del>
                         , so you have just wasted several minutes to read this piece of shit.
                         <br><br>
@@ -173,12 +173,15 @@
 
 <!-- Scripts -->
 <script src="assets/js/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <!--[if lte IE 8]>
 <script src="assets/js/ie/respond.min.js"></script><![endif]-->
 <script src="assets/js/main.js"></script>
+
+</body>
+</html>
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.4/css/bootstrap3/bootstrap-switch.min.css"/>
@@ -187,206 +190,17 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/css/bootstrap-slider.css"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/bootstrap-slider.js"></script>
 
-</body>
-</html>
-
-<script type="text/javascript">
-    $("#acPower").bootstrapSwitch({
-        onText: 'On',
-        offText: 'Off'
-    });
-
-    $('#acTemp').bootstrapSlider({
-        id: 'acTempSlider',
-        min: 16,
-        max: 32,
-        value: 26,
-        tooltip: 'show',
-        formatter: function (value) {
-            return value + '°C';
-        }
-    });
-</script>
-
-<script type="text/javascript">
-    function getAcOptions() {
-        let pwd = $("#acPower").data('bootstrap-switch').options.state;
-        let temp = $('#acTemp').bootstrapSlider('getValue');
-        let fanSpd = $("input[type='radio']:checked").data('gear');
-
-        return {
-            type: 0,
-            room: undefined,
-            switch: pwd,
-            temperature: temp,
-            wind: fanSpd
-        };
-    }
-
-    $("#acPower").on('switchChange.bootstrapSwitch', function () {
-        let tmpStr = JSON.stringify(getAcOptions());
-        alert(tmpStr);
-    });
-
-    $("#acTemp").on('slideStop', function () {
-        let tmpStr = JSON.stringify(getAcOptions());
-        alert(tmpStr);
-    });
-
-    $("input[type='radio']").change(function () {
-        let tmpStr = JSON.stringify(getAcOptions());
-        alert(tmpStr);
-    })
-</script>
+<script type="text/javascript" src="initial.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
 
-<script type="text/javascript">
-    let ctx = document.getElementById("chart").getContext('2d');
-
-    let chartInitParam = {
-        type: 'line',
-        data: {
-            labels: [],
-            datasets: [{
-                label: '',
-                data: [],
-                backgroundColor: 'rgba(220, 220, 220, 0.5)',
-                borderColor: '#f56a6a',
-                fill: true,
-//                lineTension:0
-            }]
-        },
-        options: {
-            responsive: true,
-            title: {
-                display: true,
-                text: 'Temperature Tendency Chart',
-                fontSize: 20
-            },
-            tooltips: {
-                mode: 'index',
-                intersect: false,
-            },
-            hover: {
-                mode: 'nearest',
-                intersect: true
-            },
-            scales: {
-                xAxes: [{
-                    display: true,
-                    scaleLabel: {
-                        display: true,
-                        labelString: 'Time / HH:mm:ss'
-                    }
-                }],
-                yAxes: [{
-                    display: true,
-                    scaleLabel: {
-                        display: true,
-                        labelString: 'Temperature / °C'
-                    }
-                }]
-            }
-        }
-    };
-
-    let myChart = new Chart(ctx, chartInitParam);
-
-    setInterval(function () {
-        myChart.data.labels.push(moment().format('HH:mm:ss'));
-        myChart.data.datasets.forEach(function (dataset) {
-            dataset.data.push(Math.random() * 16 + 16);
-        });
-        myChart.update();
-    }, 1000);
-</script>
-
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.33.5/css/bootstrap-dialog.css"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.33.5/js/bootstrap-dialog.min.js"></script>
 
-<script type="text/javascript">
-    $("a#checkoutBtn").click(function () {
-        /************
-         * json with two key
-         *      history <list>: event and its timestamp
-         *      cost <float>: cost
-         *
-         * TODO
-         ************/
+<script src="https://cdn.bootcss.com/socket.io/2.1.0/socket.io.js"></script>
 
-        let checkOutInfo = {
-            history: [
-                {
-                    event: 'A',
-                    timestamp: 1514739661
-                },
-                {
-                    event: 'B',
-                    timestamp: 1514743261
-                },
-                {
-                    event: 'C',
-                    timestamp: 1514743321
-                },
-                {
-                    event: 'B',
-                    timestamp: 1514916121
-                },
-                {
-                    event: 'C',
-                    timestamp: 1517594521
-                },
-                {
-                    event: 'A',
-                    timestamp: 1517594525
-                },
-                {
-                    event: 'B',
-                    timestamp: 1517608925
-                }
-            ],
-            cost: 100
-        };
+<script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.2.4/EventEmitter.min.js"></script>
 
-        let history = JSON.parse(JSON.stringify(checkOutInfo.history));
-
-        history.sort(function (x, y) {
-            return x.timestamp - y.timestamp;
-        });
-
-        let msgHead = `<div class="table-wrapper"><table class="alt"><thead><tr> <th>Time</th><th>Event</th> </tr></thead><tbody>`;
-        let msgBody = '';
-        let msgTail = `</tbody></table></div>`;
-
-        history.forEach(function (item) {
-            msgBody += `<tr><td>${moment(item.timestamp, 'X').format('YYYY-MM-DD HH:mm:ss')}</td><td>${item.event}</td></tr>`;
-        });
-
-        let msg = msgHead + msgBody + msgTail;
-
-        msg += `<div class="totPrice"><h4 class="rawInfo">Total Price:</h4>￥ ${checkOutInfo.cost}</div>`;
-
-        BootstrapDialog.show({
-            type: BootstrapDialog.TYPE_DEFAULT,
-            title: 'Usage Detail',
-            message: msg,
-            buttons: [{
-                label: 'Pay and Leave',
-                cssClass: 'dialogBtn',
-                action: function () {
-//                    window.location.href = "http://www.baidu.com";
-                }
-            }, {
-                label: 'Cancel',
-                cssClass: 'dialogBtn',
-                action: function (dialogItself) {
-                    dialogItself.close();
-                }
-            }],
-            closable: false
-        });
-    });
-</script>
+<script type="text/javascript" src="onChange.js"></script>
