--- a/server.html
+++ b/server.html
@@ -1,22 +1,13 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 <head>
-    <title>AC Controller</title>
+    <title>Monitor</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-
     <link rel="icon" href="./index.ico" type="image/x-icon"/>
-    <link rel="shortcut icon" href="./index.ico" type="image/x-icon"/>
 
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="lib/css/style.css">
     <!--[if lte IE 8]>
     <script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css"/>
@@ -67,10 +58,18 @@
                 <table class="ctrlPad">
                     <tr>
                         <td>
+                            <h3 class="ctrlName">Room</h3>
+                        </td>
+                        <td>
+                            <h3 id="room" class="ctrlName value"></h3>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
                             <h3 class="ctrlName">Power</h3>
                         </td>
                         <td>
-                            <input type="checkbox" id="acPower">
+                            <h3 id="acPower" class="ctrlName value"></h3>
                         </td>
                     </tr>
                     <tr>
@@ -78,7 +77,7 @@
                             <h3 class="ctrlName">Temperature</h3>
                         </td>
                         <td>
-                            <input id="acTemp">
+                            <h3 id="acTemp" class="ctrlName value"></h3>
                         </td>
                     </tr>
                     <tr>
@@ -86,14 +85,7 @@
                             <h3 class="ctrlName">Fan Speed</h3>
                         </td>
                         <td>
-                            <div class="fanCtrl">
-                                <input type="radio" id="demo-priority-low" name="demo-priority" data-gear="SongFeng" checked>
-                                <label for="demo-priority-low">SongFeng</label>
-                                <input type="radio" id="demo-priority-normal" name="demo-priority" data-gear="Normal">
-                                <label for="demo-priority-normal">Normal</label>
-                                <input type="radio" id="demo-priority-high" name="demo-priority" data-gear="High">
-                                <label for="demo-priority-high">High</label>
-                            </div>
+                            <h3 id="fanCtrl" class="ctrlName value"></h3>
                         </td>
                     </tr>
                     <tr>
@@ -101,7 +93,7 @@
                             <h3 class="ctrlName">Mode</h3>
                         </td>
                         <td>
-                            <h3 id="mode" class="ctrlName">cool</h3>
+                            <h3 id="mode" class="ctrlName value"></h3>
                         </td>
                     </tr>
                 </table>
@@ -113,18 +105,10 @@
                 <header class="major">
                     <h2>Statics</h2>
                 </header>
-                <div class="features">
-                    <canvas id="chart"></canvas>
+                <div class="canvasHouse align-center">
+                    <!--<canvas id="chart"></canvas>-->
                 </div>
             </section>
-
-            <div class="checkout">
-                <a class="button checkoutBtn" id="checkoutBtn">
-                    <span class="glyphicon glyphicon-log-out"></span>
-                    Checkout
-                </a>
-            </div>
-
         </div>
     </div>
 
@@ -133,8 +117,16 @@
         <div class="inner">
 
             <div class="welcome" align="center">
-                <h1>Welcome! Room 111 Guest</h1>
+                <h1>Honored to Serve You My Lord</h1>
             </div>
+
+            <nav id="menu">
+                <header class="major">
+                    <h2>Room</h2>
+                </header>
+                <ul id="roomList">
+                </ul>
+            </nav>
 
             <section>
                 <header class="major">
@@ -181,26 +173,9 @@
 
 </body>
 </html>
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="assets/js/socket.io.js"></script>
+<script src="assets/js/EventEmitter.min.js"></script>
+<script src="assets/js/moment.min.js"></script>
+<script src="assets/js/Chart.js"></script>
 
-<link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.4/css/bootstrap3/bootstrap-switch.min.css"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/3.3.4/js/bootstrap-switch.min.js"></script>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/css/bootstrap-slider.css"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.0.2/bootstrap-slider.js"></script>
-
-<script type="text/javascript" src="initial.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.1/moment.min.js"></script>
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.33.5/css/bootstrap-dialog.css"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.33.5/js/bootstrap-dialog.min.js"></script>
-
-<script src="https://cdn.bootcss.com/socket.io/2.1.0/socket.io.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/EventEmitter/5.2.4/EventEmitter.min.js"></script>
-
-<script type="text/javascript" src="onChange.js"></script>
+<script type="text/javascript" src="lib/js/monitor.js"></script>
