add high fan spd

--- a/client.html
+++ b/client.html
@@ -85,6 +85,8 @@
                             <div class="fanCtrl">
                                 <input type="radio" id="demo-priority-low" name="demo-priority" data-gear="Fan" checked>
                                 <label for="demo-priority-low">Fan</label>
+                                <input type="radio" id="demo-priority-low" name="demo-priority" data-gear="Low">
+                                <label for="demo-priority-low">Low</label>
                                 <input type="radio" id="demo-priority-normal" name="demo-priority" data-gear="Normal">
                                 <label for="demo-priority-normal">Normal</label>
                                 <input type="radio" id="demo-priority-high" name="demo-priority" data-gear="High">
