add doughnut in monitor

--- a/client.html
+++ b/client.html
@@ -83,8 +83,8 @@
                         </td>
                         <td>
                             <div class="fanCtrl">
-                                <input type="radio" id="demo-priority-low" name="demo-priority" data-gear="Fan" checked>
-                                <label for="demo-priority-low">Fan</label>
+                                <input type="radio" id="demo-priority-fan" name="demo-priority" data-gear="Fan" checked>
+                                <label for="demo-priority-fan">Fan</label>
                                 <input type="radio" id="demo-priority-low" name="demo-priority" data-gear="Low">
                                 <label for="demo-priority-low">Low</label>
                                 <input type="radio" id="demo-priority-normal" name="demo-priority" data-gear="Normal">
