--- a/server.html
+++ b/server.html
@@ -106,8 +106,16 @@
                     <h2>Statics</h2>
                 </header>
                 <div class="canvasHouse align-center">
-                    <!--<canvas id="chart"></canvas>-->
+                    <!--<canvas id="line"></canvas>-->
                 </div>
+            </section>
+
+            <!-- Section -->
+            <section>
+                <header class="major">
+                    <h2>Information</h2>
+                </header>
+                <canvas id="doughnut"></canvas>
             </section>
         </div>
     </div>
